<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:background="@color/background_not_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_settings"
        android:orientation="vertical"
        >

        <TextView
            style="@style/Tittle"
            android:paddingTop="40dp"
            android:paddingBottom="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Настройки" />


        <Switch
            android:id="@+id/themeSwitcher"
            style="@style/SettingsTextView"
            android:layout_marginEnd="4dp"
            android:text="@string/dark_theme"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:trackTint="@color/switch_track"
            android:thumbTint="@color/switch_tumb"

            />



        <TextView
            android:id="@+id/shareApp"
            style="@style/SettingsTextView"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/icon_share"

            />

        <TextView
            android:id="@+id/textToSupport"
            style="@style/SettingsTextView"
            android:text="@string/write_to_support"
            app:drawableEndCompat="@drawable/icon_suppot"
           />


        <TextView
            android:id="@+id/userAgreement"
            style="@style/SettingsTextView"
            android:text="@string/user_agr"
            app:drawableEndCompat="@drawable/icon_arrow_forward" />


    </LinearLayout>


</LinearLayout>