<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/margin"
        android:text="@string/Поиск"
        android:textColor="@color/black"
        android:textSize="@dimen/big_button_text_size"
        android:backgroundTint="@color/white"
        app:icon="@drawable/icon_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius"
        android:layout_marginBottom="@dimen/margin"/>
    />

    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/Медиатека"
        android:textColor="@color/black"
        android:textSize="@dimen/big_button_text_size"
        app:cornerRadius="@dimen/radius"
        app:icon="@drawable/icon_lib"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/margin"
        android:text="@string/Настройки"
        android:textColor="@color/black"
        android:textSize="@dimen/big_button_text_size"
        android:backgroundTint="@color/white"
        app:icon="@drawable/icon_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius"
        android:layout_marginBottom="@dimen/margin"
        />


</LinearLayout>



