<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_adding_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_not_main"
    tools:context=".library.ui.activity.PlaylistAddingFragment"
    >
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf = "parent"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="4dp"
        android:paddingStart="@dimen/margin_settings"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_from_adding_playlist"
            style="@style/ReturnArrowStyle"
            />
        <TextView
            style="@style/Tittle"
            android:layout_marginBottom="12dp"
            android:text="@string/new_playlist"/>
    </LinearLayout>

        <ImageView
            android:id="@+id/addedImage"
            android:layout_width="@dimen/playlist_image_frame"
            android:layout_height="@dimen/playlist_image_frame"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf = "@id/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_add_image"
            android:layout_gravity="center"
            android:background="@drawable/frame"
            android:gravity="center"
            android:scaleType="centerInside">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf = "@id/addedImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/background_not_main"
            app:boxStrokeColor="@drawable/selector_box_stroke_color"
            app:helperTextTextColor="@color/text"
            app:hintTextColor="@color/text"
            android:textCursorDrawable="@color/text"
            android:layout_marginTop="32dp"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text"
            android:hint="@string/playlist_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_playlist_name"
                style="@style/AddingPlaylistAttr"
                tools:text="Мой плейлист"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf = "@id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/background_not_main"
            app:boxStrokeColor="@drawable/selector_box_stroke_color"
            app:helperTextTextColor="@color/text"
            app:hintTextColor="@color/text"
            android:textCursorDrawable="@color/text"
            android:layout_marginTop="@dimen/margin_frame"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text"
            android:hint="@string/playlist_description" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_playlist_description"
                style="@style/AddingPlaylistAttr"
                tools:text="Мой плейлист"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_create_playlist"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="32dp"
            android:text="@string/create"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_medium"
            android:backgroundTint="@drawable/selector_button_color"
            />

</androidx.constraintlayout.widget.ConstraintLayout>