<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_search"
    android:background="@color/background_not_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_settings"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="40dp"
            android:paddingBottom="4dp"

            >

            <ImageView
                android:id="@+id/backToMainFromSearch"
                style="@style/ReturnArrowStyle"

                />

            <TextView
                style="@style/Tittle"
                android:layout_marginBottom="4dp"
                android:paddingBottom="12dp"
                android:text="@string/Поиск" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_settings"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/margin_settings">

            <EditText
                android:id="@+id/inputEditText"
                style="@style/TextView"
                android:layout_height="36dp"
                android:background="@drawable/search_field"
                android:backgroundTint="@color/search_field"
                android:drawablePadding="@dimen/icon_padding"
                android:hint="@string/Поиск"
                android:cursorVisible="true"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_field"
                android:textCursorDrawable="@color/black"
                app:drawableStartCompat="@drawable/icon_search_14"
                app:drawableTint="@color/edit_text_field" />

            <ImageView
                android:id="@+id/clearSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:fillColor="@color/clear_icon"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"

                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/error_track_not_found"
                style="@style/ErrorsTextView"
                android:text="@string/error_track_not_found"
                app:drawableTopCompat="@drawable/error_ic_nothing_was_found"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/error_no_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >
            <TextView
                style="@style/ErrorsTextView"
                android:text="@string/error_no_internet"
                app:drawableTopCompat="@drawable/error_ic_no_internet"


                />
                <Button
                    android:id="@+id/refrash_button"
                    android:text="@string/refrash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ys_display_medium"
                    android:textColor="@color/refresh_button_text"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/refresh_button_tint"
                    android:layout_marginTop="24dp"
                    app:cornerRadius="54dp"
                    />
            </LinearLayout>

        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

