<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityMediatech"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_not_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="4dp"
        android:paddingLeft="@dimen/margin_frame">

        <ImageView
            android:id="@+id/backToMainFromLibrary"
            style="@style/ReturnArrowStyle"/>

        <TextView
            style="@style/Tittle"
            android:layout_marginBottom="4dp"
            android:paddingBottom="12dp"
            android:text="@string/Медиатека" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
        <LinearLayout
            android:id="@+id/selectedTracks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline">
            <TextView
                style="@style/TextMedium14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_tracks"
            />
            <View
                android:id="@+id/selectedTracksLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="@dimen/margin_frame"
                android:layout_marginStart="@dimen/margin_frame"
                android:layout_marginTop="@dimen/margin_frame"
                android:background="@color/text"
                android:visibility="visible"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            >

            <TextView
                style="@style/TextMedium14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlists" />
            <View
                android:id="@+id/playlistsLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_frame"
                android:layout_marginTop="@dimen/margin_frame"
                android:layout_marginEnd="@dimen/margin_frame"
                android:background="@color/text"
                android:visibility="gone"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentСontainerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>
